# ChangeLog for app-i18n/imsettings
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-i18n/imsettings/ChangeLog,v 1.5 2011/05/07 01:24:14 matsuu Exp $

*imsettings-1.2.2 (07 May 2011)

  07 May 2011; MATSUU Takuto <matsuu@gentoo.org> +imsettings-1.2.2.ebuild,
  +files/imsettings-1.2.2-gtk.patch:
  Version bumped.

*imsettings-1.2.1 (06 Apr 2011)

  06 Apr 2011; MATSUU Takuto <matsuu@gentoo.org> +imsettings-1.2.1.ebuild:
  Version bumped.

*imsettings-1.0.1 (01 Feb 2011)

  01 Feb 2011; MATSUU Takuto <matsuu@gentoo.org> +imsettings-1.0.1.ebuild:
  Version bumped.

  31 Jan 2011; Samuli Suominen <ssuominen@gentoo.org> imsettings-1.0.0.ebuild,
  metadata.xml:
  Prevent automagic linking to libxfconf-0 and rename USE="xfce" to
  USE="xfconf" wrt #353117.

*imsettings-1.0.0 (08 Jan 2011)

  08 Jan 2011; MATSUU Takuto <matsuu@gentoo.org> +imsettings-1.0.0.ebuild,
  +metadata.xml:
  Initial import.
