@@ -6,26 +6,28 @@ DIST imsettings-1.0.0.tar.bz2 570007 RMD160 765ef8cd7272d69cd02ddc8ff461374d8f9a
 DIST imsettings-1.0.1.tar.bz2 573096 RMD160 0cbfcb6db5128c02b0ee5797b65882796de92151 SHA1 2f816ee8798807e1656e8f51daa9c296ec19e603 SHA256 44aff9f5b11359621643aa9905b06dd97e4741ec4ace69b9e2e84e9bfc5323a2
 DIST imsettings-1.2.1.tar.bz2 509375 RMD160 19faa7e591765ac93532c871014cd86b9aac1d5b SHA1 00f0f6bed6574176a3f28d6558a24388ecdb96d6 SHA256 90708713d78be719b55cf7bf2dfba380960d8140531269a53a83f9e7091b3ba7
 DIST imsettings-1.2.2.tar.bz2 512047 RMD160 03907157629e979d560cfee287c1d2e31c4c70ef SHA1 28336c70b176b765ba0225d8ebd1d10b92236b50 SHA256 701f02270f70c018897b8d99c9258483620ef48d79d1216852769c8a99d620c6
+DIST imsettings-1.2.4.tar.bz2 528403 RMD160 aa4530a726a3784e3a31e7973048eba3e64ae5bb SHA1 4dc1ad32b0091824c89ac4c46aec9d4d74ee3ab8 SHA256 853c996df56c70b5b4aab3c6835f672d69ddc99cd8f0b7f790af741cedb9ac75
 EBUILD imsettings-1.0.0.ebuild 1495 RMD160 5cc126f572b992133790928f5b2362977ef05d31 SHA1 d1630274e29c5528cc3ffc4bdadda0291682e015 SHA256 3faa978c570009a01aa7a075491f01f21a4c842d29b13b70ffbe83fe31f487fe
 EBUILD imsettings-1.0.1.ebuild 1492 RMD160 b4d384f65f1e2708aa6e3813636c6852fdef8aac SHA1 db45c6976926b572e8fa0a3ff6e0395e0aabe4ef SHA256 bedcf6534600a645adfd863c41281ada099afa9eeb76c01eb15f80346d680564
 EBUILD imsettings-1.2.1.ebuild 1523 RMD160 4011f0acf4bfb9a3335008ec8806e8c25a2721ef SHA1 a830c828f5f21131e86300d030332da052519efe SHA256 14140fcd95c973df5bbc124fb7e7b66827c652531c458ac5582fa3410dc733b1
 EBUILD imsettings-1.2.2.ebuild 1641 RMD160 0a623ef5b5e9c648c3f0357a6d72aff243965f36 SHA1 2a68ae928cd39230573f49db0e738814465e9027 SHA256 e35597e19ad84f34f632d29a99c9896bdd8cd80d7421db0f80e3ad6ccbeadef1
-MISC ChangeLog 965 RMD160 b0adb3b9788a164ab7e966a4e1924ee92c0ce4e5 SHA1 f3173ad0f64d88426572abc84fe72a1867ab78c1 SHA256 17245711d1fbcc07a4df12880a696088d16b39b6d4a41410b223651fc6a66156
+EBUILD imsettings-1.2.4.ebuild 1603 RMD160 6f6bfbe5d1202b92c38676f7563b7638985499f3 SHA1 4f100ff9a38622357bae5a404996e97e7acca85c SHA256 e068645e74c5722addd271d4c5300a401199fbd0bd8d1626efc12cb4d6c9d556
+MISC ChangeLog 1092 RMD160 6e684ba9748d95a1a2530dbb4d5825b2f7120048 SHA1 3f0df0a93933943916aac079bdbc268337a49250 SHA256 67b3ad16beffb4c4b3ed457b0f406b27c4ab53573fae96a558bd10e96ebe5e71
 MISC metadata.xml 282 RMD160 9f36b738155c88fda983f1b26fb6bb140f8b1080 SHA1 5bb53341ab0835d84fdd70f192eaa1415c90b670 SHA256 5ba2ba2aabd29f07552a4b611794f74d49b472f235b5dc67d9ef206657e70b82
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iQIcBAEBAgAGBQJNxJ9GAAoJECaGw+YFKA1pZv8P/2HxIU/9k4zCfFC1Eb0NdOk0
-EfdE6s8+ZQwauo5b3XMdZBIs5tIzLL5X60QX/IkmUTe0Ns39/QpzRTMs9fme0Dyt
-EUq6u2mHxeN5wKlwz6J7pnsTcLepNA1ashyvldfvAZVMbqBLo5mPTwRulXqGgG/i
-lM/w93GvPMzQb+PNvT+pQuTEZqNUlMNWgWuHqIsuWnqzImeWt/a2kKDEp8PIYXkO
-KYrQV4xhk7YwvHp6tXHy0GhfJGhvZ4u9PRJsDsN3YqPpEPLF6cKYhFflN7lwtk3G
-ZBQThyCK0ghWeSJaFQq/4vgMT7XJpBUPWJOhKq1NkOEbt0tewqp//mOa9nVp82+e
-w50lxdBEZSCAQmgdnx6dru3oFftrmTTQaKoGIs11nDHI/95FvhP3D40UeVXsutKj
-ekhnycCD+9T2Ze1BNp0I6IU8mB+LG6Qhv85S0msmWXVlx1e5+9EEIe3T8NW1S4Cs
-gkFPx08hOzZPA4Zs4h6B1kLZUPR3G7UwjcRAeg5uPyc+0lfucARUfQWCQQSGmcar
-gWESk8AgcleH7F68ysMZbgfG3BXY59WJ6A26C0KUT3L2fi6PB70FmDZqu0/tFguh
-0q8AJZ9SpXuxZX6/4/+VJoC+Z6IbwGzB6FBPL5FQIrpgxy5fvmnNcf+ke2xQf75J
-of1Wrf8BifCR2lN89Wtk
-=73AY
+iQIcBAEBAgAGBQJOQWq/AAoJECaGw+YFKA1pVFMP/iOT90bCF8hsp9bAyQSF+Jlr
+dpVfWHH7W1kOz3AzhGt+U66/p6Mi0Dr8sIVhv0RqaDlGUKrQ7x5xz7bSk3mbTluM
+1LYGAD0D8cP/0qRY9nVM/oWlj6Kt2e57GferzVes4jhJsFmbmSVm8WcNMcLS9AGI
+HtCm3R/GXaIpjF3CdP1gfI4XIYMuPqWZioKNuh6wkHIMi351iUxR+5eg8YCRofTi
+yM+MA2KYSOm7qxPmHgz02Jf3k/UF893m0/mUCS9YkD2j5VthsMMJ2E4WQ18v0Nqn
+Fx/kOgxzKgKTeMFPkTntnwX7ME+tENRRjs9to4njcoMrSiJgroM3TnNR2m/OFXFd
+2UjGY8MwfUwfyojRZuODNdGds7FU/yFDMPWcHX6rcW3kjFiwXWhWqNbrrEUgB8I3
+XWJxkTpLsc4rRqtZ04OU67l+5eWLkEYXLnta1lUrtOfWYvlhkTK4ujJUFLXLUTGQ
+vSSZBR6inDF2Ir9hw5kwEQt4ABWzsqTO0r4135f9rCdSwjicsGzKysahoI3GFsBO
+0l8PzfZDjwY0bqvumyx2v/XeFfhh9Y8HjX2Y7XwyGk/th7mfvjW9WN7Wk7GT8GCD
+S7m6ggP0+ITGci2G9aTYYdLFQDh6yDjeqdwcPgzCneRGD3S/pJXrxSldBpyUI4G5
+pIHKCfInhMzBdfusz0KO
+=k//P
 -----END PGP SIGNATURE-----
