@@ -1,6 +1,11 @@
 # ChangeLog for app-i18n/imsettings
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-i18n/imsettings/ChangeLog,v 1.5 2011/05/07 01:24:14 matsuu Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/imsettings/ChangeLog,v 1.6 2011/08/09 17:13:23 matsuu Exp $
+
+*imsettings-1.2.4 (09 Aug 2011)
+
+  09 Aug 2011; MATSUU Takuto <matsuu@gentoo.org> +imsettings-1.2.4.ebuild:
+  Version bumped.
 
 *imsettings-1.2.2 (07 May 2011)
 
